# Digiseal

./: README.md
rust-encryption/: Cargo.toml
rust-encryption/src/: containerize.rs  encrypt.rs  main.rs
